[project]
name = "songlib"
version = "0.1.0"
description = "SongLib is a personal Django application that helps me manage my song lyrics and setlists "
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asgiref==3.7.2",
    "Django==4.2.7",
    "django-admin-sortable2==2.1.10",
    "django-prose-editor[sanitize]",
    "django-environ==0.11.2",
    "django-js-asset==3.1.2",
    "djangorestframework==3.14.0",
    "gunicorn==21.2.0",
    "packaging==23.2",
    "psycopg2-binary==2.9.9",
    "pytz==2023.3.post1",
    "sqlparse==0.4.4",
    "typing-extensions==4.8.0",
    "whitenoise==6.6.0",
    "html2text>=2025.4.15",
]
